--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   },
   "dependencies": {
     "next": "12.0.7",
-    "node-sass": "^7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-swipeable": "^6.2.0",
+    "sass": "^1.47.0"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
